# text-classifier-demo

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: artifactory.py  cli.py  conf.py  constants.py  plotting.py
app/api/: api.py  contracts.py  load_model.py  parse_request.py
app/models/: base.py  callbacks.py  cnn.py  lgbm.py  serving.py  trainer.py
app/preprocessing/: embedings.py  label_encoder.py  load_data.py  preprocess_data.py  tokenization.py
app/runners/: experiment_runner.py  train_model_runner.py
app/workflows/: preprocessing.py  training.py
app/workflows/model_building/: keras_cnn.py  keras_muse.py  keras_tfidf.py
notebooks/: compare-experiments.ipynb
test/: conftest.py  test_api.py  test_artifactory.py  test_end_to_end.py  test_preprocess_data.py  test_tokenizer.py
